# connect4_rule

./: .gitignore  CMakeLists.txt  README.md  cmake_4_nao.txt
include/: Game.hpp
share/cmake/connect4_rule/: CONNECT4_RULEConfig.cmake  connect4_rule.cmake
src/: Game.cpp
test/: main_test.cpp
